--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,33 @@
     <string name="remember_me">Remember me</string>
     <string name="forget_password">Forget password?</string>
     <string name="slider1">الصحة هي مستوى الكفاءة الوظيفية والأيضية للكائن الحي، أما عند الإنسان فالصحة لدى الأفراد والمجتمعات وفقا لتعريف منظمة الصحة العالمية في إعلان لمبادئ الرعاية الصحية الأولية عام 1978. هي حالة من اكتمال السلامة البدنية والعقلية والإجتماعية وليس مجرد غياب أو إنعدام للمرض أو العجز.</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="call">Call</string>
+    <string name="donation">Donation</string>
+    <string name="blood_type">Blood type</string>
+    <string name="age">Age</string>
+    <string name="bags_number">Bags number</string>
+    <string name="address">Address</string>
+    <string name="send">Send</string>
+    <string name="note">Notes</string>
+    <string name="empty">Field required</string>
+    <string name="invalid_age">Please, write your age</string>
+    <string name="invalid_bags_number">Please, enter bags number</string>
+    <string name="invalid_hospital_name">Please, enter hospital name</string>
+    <string name="invalid_hospital_address">Please, enter hospital address</string>
+    <string name="hospital_addresse">Hospital address</string>
+    <string name="hospital_name">Hospital name</string>
+    <string name="max_notification">+9</string>
+    <string name="donations">Donations</string>
+    <string name="articles">Articles</string>
+    <string name="notification">Notification</string>
+    <string name="edit_data">Edit data</string>
+    <string name="load_more">Load more</string>
+    <string name="no_donations">No donations to retrieve, \n Please start saving the human by donating blood now</string>
+    <string name="no_notification">No notification now , \n Please start saving the human by donating blood now</string>
+    <string name="add_new_donation">Add new donation</string>
+    <string name="error_list">Same thing happened, Please try again later</string>
+    <string name="error_inter_net">No internet connection, Please check your internet connection try again later</string>
+    <string name="reload">reload</string>
 
 </resources>
