--- a/mirvalidation/src/main/res/values/strings.xml
+++ b/mirvalidation/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="invalid_phone2"> number</string>
     <string name="invalid_confirm_password">Confirm password not match</string>
     <string name="empty">Fields are required</string>
+    <string name="phone3">phone number must be 11 number</string>
+    <string name="weak_password">password is weak</string>
 </resources>
