--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="wait">Please wait....</string>
     <string name="select_date">Select date</string>
     <string name="invalid_user_name">Username mast be more than 3 cher</string>
-    <string name="invalid_password">Username mast be more than 6 of cher and number</string>
+    <string name="invalid_password">Password mast be more than 6 of cher and number</string>
     <string name="invalid_brd">Please select your birthday</string>
     <string name="invalid_last_date">Please select your last donation date</string>
     <string name="select_city">Select city</string>
@@ -81,9 +81,16 @@
     <string name="favourites">favourites</string>
     <string name="contact_us">contact us</string>
     <string name="about_app">about app</string>
-    <string name="rate_app">raet on play store</string>
+    <string name="rate_app">rate on play store</string>
     <string name="notifications_settings">notifications settings</string>
     <string name="sign_out">sign out</string>
     <string name="search_keyword">enter search keyword</string>
+    <string name="select_category">select category</string>
+    <string name="add_to_favourite">added to favourites</string>
+    <string name="remove_from_favourite">removed from favourites</string>
+    <string name="enter_message_title">enter your message title</string>
+    <string name="enter_message_content">enter your message content</string>
+    <string name="more">more</string>
+    <string name="logout">want to log out ??</string>
 
 </resources>
