--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="wait">Please wait....</string>
     <string name="select_date">Select date</string>
     <string name="invalid_user_name">Username mast be more than 3 cher</string>
-    <string name="invalid_password">Username mast be more than 6 of cher and number</string>
+    <string name="invalid_password">Password mast be more than 6 of cher and number</string>
     <string name="invalid_brd">Please select your birthday</string>
     <string name="invalid_last_date">Please select your last donation date</string>
     <string name="select_city">Select city</string>
@@ -85,5 +85,7 @@
     <string name="notifications_settings">notifications settings</string>
     <string name="sign_out">sign out</string>
     <string name="search_keyword">enter search keyword</string>
+    <string name="create_donation">Create donation</string>
+    <string name="select_location">Select location</string>
 
 </resources>
